<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#AAC1E2"
    android:orientation="vertical" >
 
    <!-- Codigo de habitacion -->

    <TextView
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:paddingLeft="10dip"
        android:paddingRight="10dip"
        android:paddingTop="10dip"
        android:text="@string/codigohabitacion"
        android:textColor="@color/darkblue"
        android:textSize="17sp" />
 
    <!-- Entrada del codigo -->

    <EditText
        android:id="@+id/inputCode"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_margin="5dip"
        android:layout_marginBottom="15dip"
        android:inputType="text"
        android:singleLine="true" />
 
    <!-- Nombre de habitacion -->

    <TextView
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:paddingLeft="10dip"
        android:paddingRight="10dip"
        android:paddingTop="10dip"
        android:text="@string/nombrehabitacion"
        android:textColor="@color/darkblue"
        android:textSize="17sp" />
 
    <!-- Input del nombre -->

    <EditText
        android:id="@+id/inputNombre"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_margin="5dip"
        android:layout_marginBottom="15dip"
        android:inputType="text"
        android:singleLine="true" />
 
    <!-- Descripcion de habitacion -->

    <TextView
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:paddingLeft="10dip"
        android:paddingRight="10dip"
        android:paddingTop="10dip"
        android:text="@string/descripcionhab"
        android:textColor="@color/darkblue"
        android:textSize="17sp" />
 
    <!-- Input description -->

    <EditText
        android:id="@+id/inputDesc"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_margin="5dip"
        android:layout_marginBottom="15dip"
        android:ems="10"
        android:inputType="text"
        android:singleLine="true" >

        <requestFocus />
    </EditText>
 
    <!-- Codigo de zigbee -->

    <TextView
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:paddingLeft="10dip"
        android:paddingRight="10dip"
        android:paddingTop="10dip"
        android:text="@string/codzigbee"
        android:textColor="@color/darkblue"
        android:textSize="17sp" />
 
    <!-- Entrada del codigo -->

    <EditText
        android:id="@+id/inputBee"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_margin="5dip"
        android:layout_marginBottom="15dip"
        android:inputType="text"
        android:singleLine="true" />
    <!-- Button Create Product -->

    <Button
        android:id="@+id/btnCreateHab"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="@string/createhabitacion" />
 
</LinearLayout>
