<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#AAC1E2"
    android:orientation="vertical" >
 
    <!-- Nombre de usuario -->

    <TextView
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:paddingLeft="10dip"
        android:paddingRight="10dip"
        android:paddingTop="10dip"
        android:text="@string/nom_user"
        android:textColor="@color/darkblue"
        android:textSize="17sp" />
 
    <!-- Entrada del nombre -->

    <EditText
        android:id="@+id/inputName"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_margin="5dip"
        android:layout_marginBottom="15dip"
        android:inputType="text"
        android:singleLine="true" />
 
    <!-- Login de usuario -->

    <TextView
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:paddingLeft="10dip"
        android:paddingRight="10dip"
        android:paddingTop="10dip"
        android:text="@string/log_user"
        android:textColor="@color/darkblue"
        android:textSize="17sp" />
 
    <!-- Input del login -->

    <EditText
        android:id="@+id/inputLogin"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_margin="5dip"
        android:layout_marginBottom="15dip"
        android:inputType="text"
        android:singleLine="true" />
 
    <!-- Password de usuario -->

    <TextView
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:paddingLeft="10dip"
        android:paddingRight="10dip"
        android:paddingTop="10dip"
        android:text="@string/pass_user"
        android:textColor="@color/darkblue"
        android:textSize="17sp" />
 
    <!-- Input description -->

    <EditText
        android:id="@+id/inputPassword"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_margin="5dip"
        android:layout_marginBottom="15dip"
        android:inputType="textPassword"
        android:singleLine="true" />
 
    <!-- Button Create Product -->

    <Button
        android:id="@+id/btnCreateUser"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="@string/modificausuario" />
 
</LinearLayout>