<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#AAC1E2"
    android:orientation="vertical" >

    <!-- Codigo de habitacion -->

    <!-- Entrada del codigo -->

    <Spinner
        android:id="@+id/spinner1"
        android:layout_width="90dp"
        android:layout_height="50dp"
        android:layout_alignParentLeft="true"
        android:layout_below="@+id/text1"
        android:layout_marginLeft="14dp"
        android:layout_marginTop="10dp"
        android:layout_weight="0.33"
        android:entries="@array/codigo"
        android:paddingLeft="10dip"
        android:paddingRight="10dip"
        android:paddingTop="10dip" />

    <EditText
        android:id="@+id/editText1"
        android:layout_width="120dp"
        android:layout_height="wrap_content"
        android:layout_alignBottom="@+id/spinner1"
        android:layout_alignTop="@+id/spinner1"
        android:layout_marginLeft="18dp"
        android:layout_toRightOf="@+id/spinner1"
        android:ems="10"
        android:inputType="number" >

        <requestFocus />
    </EditText>
    
    <TextView
        android:id="@+id/TextView02"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/spinner1"
        android:layout_below="@+id/spinner1"
        android:paddingTop="10dip"
        android:text="@string/desc_dispositivo"
        android:textColor="@color/darkblue"
        android:textSize="17sp" />

    <TextView
        android:id="@+id/text1"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/spinner1"
        android:layout_alignParentTop="true"
        android:paddingRight="10dip"
        android:paddingTop="10dip"
        android:text="@string/cod_dispositivo"
        android:textColor="@color/darkblue"
        android:textSize="17sp" />

    <EditText
        android:id="@+id/editText2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/TextView02"
        android:layout_alignRight="@+id/editText1"
        android:layout_below="@+id/TextView02"
        android:layout_marginTop="10dp"
        android:ems="5" />

    <TextView
        android:id="@+id/TextView01"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/editText2"
        android:layout_below="@+id/editText2"
        android:paddingTop="10dip"
        android:text="@string/tipodispositivo"
        android:textColor="@color/darkblue"
        android:textSize="17sp" />

    <Spinner
        android:id="@+id/spinner2"
        android:layout_width="wrap_content"
        android:layout_height="50dp"
        android:layout_alignLeft="@+id/TextView01"
        android:layout_alignRight="@+id/editText1"
        android:layout_marginTop="10dp"
        android:entries="@array/dispositivo"
        android:layout_below="@+id/TextView01" />

    <Button
        android:id="@+id/btnCreateDisp"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/TextView03"
        android:layout_alignParentBottom="true"
        android:layout_alignRight="@+id/editText2"
        android:layout_marginBottom="78dp"
        android:text="@string/createdispositivo" />

    <TextView
        android:id="@+id/TextView03"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/spinner2"
        android:layout_below="@+id/spinner2"
        android:layout_marginTop="21dp"
        android:paddingRight="10dip"
        android:paddingTop="10dip"
        android:text="@string/estadoinicial"
        android:textColor="@color/darkblue"
        android:textSize="17sp" />

    <Spinner
        android:id="@+id/spinner3"
        android:layout_width="90dp"
        android:layout_height="50dp"
        android:layout_alignRight="@+id/btnCreateDisp"
        android:layout_alignTop="@+id/TextView03"
        android:layout_weight="0.33"
        android:entries="@array/onoff"
        android:paddingLeft="10dip"
        android:paddingRight="10dip" />

</RelativeLayout>
